# cnpm-tests

./: .gitmodules  CMakeLists.txt  LICENSE
cnpm_add_package2/: CMakeLists.txt  template__package.cmake
corruptedLocalPackages/: test.cmake
corruptedLocalPackages/checksum/: CMakeLists.txt  msvs-2019-amd64-1.7z
corruptedLocalPackages/partially/: CMakeLists.txt  boost-1.72.0-amd64-0sdk18362_vsbt19.7z
defaultUrlList/: CMakeLists.txt
defaultUrlList/test/: CMakeLists.txt
emptyTag/: CMakeLists.txt
emptyTag/test/: CMakeLists.txt
extractExistingPackage/: CMakeLists.txt  test.cmake
interruptDownloading/: CMakeLists.txt  test.dart
interruptDownloading/test/: CMakeLists.txt  packageInfo.cmake
interruptExtracting/: CMakeLists.txt  test.dart
interruptExtracting/test/: CMakeLists.txt
severalAddPackage/: CMakeLists.txt
twoEmptyTags/: CMakeLists.txt
twoEmptyTags/test/: CMakeLists.txt
variablesOverride/: CMakeLists.txt
version0/: CMakeLists.txt
version0/jpeg-letters/: CMakeLists.txt
version0/openssl-letters/: CMakeLists.txt
version0/wellKnownLinux/: env.cmake
version0/wellKnownWindows/: CMakeLists.txt  env.cmake
